CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET(CMAKE_CXX_STANDARD_REQUIRED 11)

#SET(CMAKE_VERBOSE_MAKEFILE ON)
#SET(CMAKE_EXE_LINKER_FLAGS "-t") # Enable to show linked libraries

PROJECT(Stable_Fluids)

SET(OpenCV_STATIC OFF)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

FIND_PACKAGE(OpenBLAS REQUIRED)
#INCLUDE_DIRECTORIES(${OpenBLAS_INCLUDE_DIRS}) # Currently not used

FIND_PACKAGE(GSL REQUIRED 2.0)
INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS})

SET(Boost_USE_STATIC_LIBS        ON) # only find static libs
SET(Boost_USE_MULTITHREADED      ON)
FIND_PACKAGE(Boost COMPONENTS system thread REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

FIND_PACKAGE(Threads REQUIRED)

ADD_EXECUTABLE(stable_fluids
        main.cpp main.h
        image.h
        DiffusionSolver.cpp DiffusionSolver.h
        TransportSolver.cpp TransportSolver.h
        ProjectSolver.cpp ProjectSolver.h)

# Replace GSL_LIBRARY with GSL_LIBRARIES to disable OpenBLAS
TARGET_LINK_LIBRARIES(stable_fluids ${OpenCV_LIBS} ${GSL_LIBRARY} ${OpenBLAS_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
